--- a/pages/main.html
+++ b/pages/main.html
@@ -21,7 +21,7 @@
                     <li><a href="#!/about">About</a></li>
                     <li><a href="#">Order Online</a></li>
                     <li><a href="#!/">Logout</a></li>
-                    
+
 
                 </ul>
             </div>
@@ -96,6 +96,14 @@
         Order Online
       </button>
     </div>
+
     </div>
+    <!-- <div class="map">
+    <p>  View Search Result On Map </p>
+<img height="150" width="200" src="http://www.thebeaverhouserestaurant.com/_/rsrc/1337528680201/map-and-directions/Beaver%20House%20Restaurant%20Map%20Detail.jpg">
+    </div> -->
+    <!-- <div class="right">
+
+    </div> -->
     </div>
 </div>
